Firebase auth added/Dashboard

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./src/components/stylesheet/main.css">
   </head>
   <body>
-    <div id="root"></div>
+
+    <div id="root">
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
